Fix issues with statistics
Such as:
 - log MD5 hash of IP instead of IP for privacy reasons
 - Use String to represent country code instead of Locale
 - Add country code in log file (determine during request processing)
 - Use IP2LOCATION-LITE-DB1.CSV database for ip2countrycode resolution
 - Expect IP2LOCATION-LITE-DB1.CSV in the root of MYSITE_DATA_DIR